--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -35,7 +35,7 @@
                             <p><small>Build your MVP on an Open Source stack, or run scale-ready products in the cloud. Choose the right plan for your project.
                             </small></p>
 
-                            <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big mt-4" href="/solutions/">
+                            <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big mt-4" href="/solutions/" target="_blank">
                                 <span class="txt">What can I use Qdrant for?</span>
                             </a>
                         </div>
@@ -48,153 +48,82 @@
             <!-- Price Block -->
             <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
                 <div class="inner-box">
-                    <div class="title">Community</div>
-                    <div class="content-box">
-                        <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> Free
-                            <span class="price-title">Apache-2.0 license</span>
-                        </div>
-                        <div class="text">Build your AI-based applications using our leading open-source vector search technology.
-                        </div>
-                        <a href="/documentation/quick-start/" class="theme-btn btn-style-five btn-small w-100">
-                            <span class="txt">Quick Start</span>
-                        </a>
-                        <ul class="price-list">
-                            <li>Open Source & Free Forever</li>
-                            <li>Self-Hosted</li>
-                            <li>Full-Featured</li>
-                            <li>Organized Community Support</li>
-                            <li>Learning Resources & Docs</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Price Block -->
-            <div class="price-block col-lg-4 col-md-6 col-sm-12">
-                <div class="inner-box">
                     <div class="title">Managed Cloud</div>
                     <div class="content-box">
                         <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> Starting from $25
-                            <span class="price-title">Per node/month billed hourly</span>
+                            <span class="icon flaticon-skyline"></span>$0
+                            <span class="price-title">Starts with 1GB free cluster, no credit card required.</span>
                         </div>
-                        <div class="text">Scale your production solutions without deployment and upkeep. <a style="font-weight:bold" href="https://cloud.qdrant.io/calculator">Calculate your usage here.</a>
+                        <div class="text">Scale your production solutions without deployment and upkeep.
+                            <a href="https://cloud.qdrant.io/calculator" target="_blank">Calculate your usage.</a>
                         </div>
-                        <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100">
-                            <span class="txt">Try for Free</span>
+                        <a href="/documentation/cloud/quickstart-cloud/" class="theme-btn btn-style-five btn-small w-100" target="_blank">
+                            <span class="txt">Start Free</span>
                         </a>
                         <ul class="price-list">
-                            <li>
-                                Free Tier Available
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Free Trial Cluster"
-                                data-content="We will include a free 1GB cluster for you to try out.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                Convenient User Interface
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="User Interface"
-                                data-content="Setup your cluster and deploy to the cloud in a few clicks.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                Fully Managed & Monitored
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Managed & Monitored by Us"
-                                data-content="Use our admin & billing interface as well as complete monitoring, logging & metrics support.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                High Availability & Performance
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Vertical Scaling"
-                                data-content="Resizing options starting at 2GB RAM, all the way to 64 (or more) GB.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                Expert Technical Support
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Expert Support"
-                                data-content="Direct communication via Discord or Slack channels.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-
-                            
+                            <li>1GB free forever cluster. No credit card required.</li>
+                            <li>Fully managed with central cluster management</li>
+                            <li>Multiple cloud providers and regions (AWS, GCP, Azure)</li>
+                            <li>Horizontal & vertical scaling</li>
+                            <li>Central monitoring, log management and alerting</li>
+                            <li>High availability, auto-healing</li>
+                            <li>Backup & disaster recovery</li>
+                            <li>Zero-downtime upgrades</li>
+                            <li>Unlimited users</li>
+                            <li>Standard support plan</li>
+                            <li>Can be upgraded to premium support plan</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
             <!-- Price Block -->
-            <div class="price-block col-lg-4 col-md-6 col-sm-12">
+            <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
                 <div class="inner-box">
-                    <div class="title">Enterprise</div>
+                    <div class="title">Hybrid Cloud</div>
                     <div class="content-box">
                         <div class="price-box">
-                            <span class="icon flaticon-skyline"></span> Price on Request
-                            <span class="price-title"> Priced per managed cluster</span>
+                            <span class="icon flaticon-skyline"></span> $0.014
+                            <span class="price-title">Starting price per hour.</span>
                         </div>
-                        <div class="text">We take care of your on-premise deployments to achieve the best possible performance and accuracy.
+                        <div class="text">Bring your own cluster from any cloud provider, on-premise infrastructure, or edge locations and connect them to the managed cloud.
                         </div>
-                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="theme-btn btn-style-five btn-small w-100">
+                        <a href="{{ .Site.Params.cloud }}" class="theme-btn btn-style-five btn-small w-100" target="_blank">
+                            <span class="txt">Get Started</span>
+                        </a>
+                        <ul class="price-list">
+                            <li>All benefits of Qdrant Cloud</li>
+                            <li>Security, data isolation, optimal latency</li>
+                            <li>Use the Managed Cloud Central Cluster Management</li>
+                            <li>Standard support plan</li>
+                            <li>Can be upgraded to premium support plan</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Price Block -->
+            <div class="price-block col-lg-4 col-md-6 col-sm-12 mb-5 pb-5">
+                <div class="inner-box">
+                    <div class="title">Private Cloud</div>
+                    <div class="content-box">
+                        <div class="price-box">
+                            <span class="icon flaticon-skyline"></span> Custom
+                            <span class="price-title">Price on request.</span>
+                        </div>
+                        <div class="text">
+                            Deploy Qdrant fully on premise for maximum control and data sovereignty.
+                            <br>
+                            <br>
+                        </div>
+                        <a href="{{ .Site.Params.prices_contact_form }}" class="theme-btn btn-style-five btn-small w-100" target="_blank">
                             <span class="txt">Contact Us</span>
                         </a>
                         <ul class="price-list">
-                            <li>Performance & Deployment
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Performance & Deployment"
-                                data-content="We'll design a fault tolerant architecture that provides maximum performance for search and online updates.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>On-Demand Horizontal Scaling 
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Horizontal Scaling Support"
-                                data-content="We offer extensive optimization strategies and scaling support.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                Neural Network Fine-Tuning
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Fine-Tuning"
-                                data-content="We will analyze your data and offer improvements to your model training process. Or even train the model for you.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                Migration and Monitoring
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Migration and Monitoring"
-                                data-content="Ensure zero-downtime for model and service updates. Set up advanced performance monitoring.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
-                            <li>
-                                Dedicated Technical Support
-                                <a class="a" role="note" tabindex="0"
-                                data-container="body" data-toggle="popover" data-placement="right"
-                                data-trigger="focus" title="Dedicated Support"
-                                data-content="Dedicated Discord or Slack channel with an assigned Support Specialist.">
-                                    <i class="fas fa-info-circle"></i>
-                                </a>
-                            </li>
+                            <li>All the benefits of Hybrid Cloud</li>
+                            <li>Security, data isolation, optimal latency</li>
+                            <li>Use the Managed Cloud Central Cluster Management or run the Central Cluster Management Interface in your own infrastructure, in the cloud, on-premise at the edge, even fully air-gapped</li>
+                            <li>Premium support plan</li>
                         </ul>
                     </div>
                 </div>
