Banner with an announcment (#811)
* banner with announcment

* banner text and link upd, banner only on the main page

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -5,6 +5,9 @@
     {{ partial "body_start.html" . }}
 
             <!-- Main Header-->
+    {{ if .IsHome }}
+    {{ partial "top-banner" (dict "context" . "classes" "") }}
+    {{ end }}
 
             {{ if (eq $.Section "documentation") }}
             <header class="main-header position-static">
