subscribe page form

--- a/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/forms/_newsletter-form.scss
@@ -96,6 +96,12 @@
       }
     }
 
+    .hs_submit {
+      @include media-breakpoint-up(lg) {
+        flex: 0 0 17%;
+      }
+    }
+
     &.style-two input,
     &.style-two button {
       border-radius: 0;
