--- a/qdrant-landing/themes/qdrant/layouts/subscribe/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/subscribe/list.html
@@ -1,26 +1,6 @@
 {{ partial "header" . }}
 
-<style>
-	#mc_embed_signup input.mce_inline_error {
-		border-color:#5C0A1C;
-	}
-	#mc_embed_signup div.mce_inline_error {
-		padding: 5px 10px;
-		font-weight: bold;
-		z-index: 1;
-        background-color: transparent;
-		color:var(--brand-primary);
-	}
-    #mce-success-response {
-		padding-bottom: 25px;
-		color: green;
-		font-size: 140%;
-    }
-    #mce-error-response {
-		padding-bottom: 25px;
-		color: red;
-	}
-</style>
+<script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
 
 <!-- Contact Page Section -->
 <section class="login-page-section">
@@ -43,32 +23,21 @@
                     <div class="welcome">Never miss our news, latest releases and updates.</div>
 
                     <!-- Contact Form -->
-                    <div class="contact-form" id="mc_embed_signup">
+                    <div class="contact-form" id="hubspot">
 
                         <!-- Begin Mailchimp Signup Form -->
-                        <form action="https://tech.us1.list-manage.com/subscribe/post?u=69617d79374ac6280dd2230b2&amp;id=acb2b876fc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <div id="mc_embed_signup_scroll">
-                                <div class="mc-field-group form-group">
-                                    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-                                    </label>
-                                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                                </div>
-                                <div class="mc-field-group form-group">
-                                    <label for="mce-FNAME">Full Name</label>
-                                    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-                                </div>
-                                <div id="mce-responses" class="clear">
-                                    <div class="response" id="mce-error-response" style="display:none"></div>
-                                    <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_69617d79374ac6280dd2230b2_acb2b876fc" tabindex="-1" value=""></div>
-                                <div class="form-group">
-                                    <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="theme-btn btn-style-three">
-                                        <span class="txt">Subscribe</span>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
+
+                        <script>
+                          hbspt.forms.create({
+                            region: "eu1",
+                            portalId: "139603372",
+                            formId: "049d96c6-ef65-4e41-ba69-a3335b9334cf",
+                            submitText: "Subscribe",
+                            target: '#hubspot',
+                            pageId: '{{- .Permalink -}}',
+                          });
+                        </script>
+
 
                     </div>
                     <!-- End Contact Form -->
