--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_customer-stories.scss
@@ -153,5 +153,9 @@
       margin-left: rem(-15);
       margin-right: rem(-15);
     }
+    .splide {
+      margin-left: -20px;
+      margin-right: -20px;
+    }
   }
 }
