moved content of baseof files to lists, so that all pages used the default layout

--- a/qdrant-landing/themes/qdrant-2024/layouts/about-us/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/about-us/list.html
@@ -1,1 +1,14 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+  <header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+  </header>
+
+  {{ partial "mission" . }}
+  {{ partial "our-story" . }}
+  {{ partial "carousel" . }}
+  {{ partial "leadership" . }}
+  {{ partial "investors" . }}
+  {{ partial "open-roles" . }}
+{{ end }}
