--- a/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/private-cloud/list.html
@@ -1,1 +1,16 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+  <header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+  </header>
+
+  {{ partial "private-cloud-hero" . }}
+  {{ partial "private-cloud-about" . }}
+  {{ partial "customer-list" . }}
+
+  {{ with (.Site.GetPage "/private-cloud/private-cloud-get-contacted") }}
+    {{ partial "get-contacted" (dict "context" . "class" "private-cloud-get-contacted") }}
+  {{ end }}
+
+{{ end }}
