--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-pricing/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-pricing/list.html
@@ -1,1 +1,35 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+<header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+</header>
+
+{{ partial "qdrant-pricing-hero" . }}
+
+<!--{{ with (.Site.GetPage "/qdrant-pricing/qdrant-pricing-doors-a") }}-->
+<!--  {{ partial "qdrant-pricing-doors" (dict "context" . "class" "qdrant-pricing-doors-a") }}-->
+<!--{{ end }}-->
+
+{{ with (.Site.GetPage "/qdrant-pricing/qdrant-pricing-doors-b") }}
+{{ partial "qdrant-pricing-doors" (dict "context" . "class" "qdrant-pricing-doors-b") }}
+{{ end }}
+
+{{ partial "qdrant-pricing-calculator" . }}
+
+{{ with (.Site.GetPage "/headless/get-started-small-database") }}
+{{ partial "get-started-small" (dict "context" . "class" "get-started-small-database") }}
+{{ end }}
+
+{{ with (.Site.GetPage "/headless/marketplaces") }}
+{{ partial "marketplaces" (dict "context" . "class" "qdrant-pricing-marketplaces") }}
+{{ end }}
+
+{{ with (.Site.GetPage "/headless/get-contacted-with-question") }}
+{{ partial "get-contacted" (dict "context" . "class" "qdrant-pricing-get-contacted") }}
+{{ end }}
+
+{{ with (.Site.GetPage "/headless/main/docker-deploy") }}
+{{ partial "docker-deploy" (dict "context" . "class" " qdrant-pricing-docker-deploy")}}
+{{ end }}
+{{ end }}
