--- a/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/qdrant-vector-database/list.html
@@ -1,1 +1,18 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+  <header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+    {{ partial "qdrant-vector-database-hero" . }}
+  </header>
+
+  {{ partial "qdrant-vector-database-use-cases" . }}
+  {{ partial "feature-overview" . }}
+
+  {{ with (.Site.GetPage "/headless/get-started-small-rocket") }}
+    {{ partial "get-started-small" (dict "context" . "class" "get-started-small-rocket") }}
+  {{ end }}
+
+  {{ partial "additional-resources" . }}
+  {{ partial "get-started" . }}
+{{ end }}
