--- a/qdrant-landing/themes/qdrant-2024/layouts/use-cases/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/use-cases/list.html
@@ -1,1 +1,13 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+  <header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+  </header>
+
+  {{ with (.Site.GetPage "vectors-use-case") }}
+    {{ .Scratch.Set "cssClass" "vectors-use-case" }}{{ partial "vectors" . }}
+  {{ end }}
+
+  {{ partial "get-started" . }}
+{{ end }}
