Customers review animation (#798)
* splide carousel on the main page

* npm run format

* fix

* buttons fix

--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -1,24 +1,23 @@
-{{ partial "head.html" . }}
-<header class="main-header">
-  {{ partial "top-banner" . }}
+{{ define "main" }}
+  <header class="main-header">
+    {{ partial "top-banner" . }}
 
-  {{ partial "menu" . }}
-  {{ partial "menu-mobile" . }}
-  {{ partial "hero" . }}
-  {{ partial "customers" . }}
-</header>
-{{ partial "core-features" . }}
-{{ partial "customer-stories" . }}
-{{ partial "integrations" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+    {{ partial "hero" . }}
+    {{ partial "customers" . }}
+  </header>
+  {{ partial "core-features" . }}
+  {{ partial "customer-stories" . }}
+  {{ partial "integrations" . }}
 
-{{ with (.Site.GetPage "/headless/main/docker-deploy") }}
-  {{ partial "docker-deploy" (dict "context" . "class" "") }}
+  {{ with (.Site.GetPage "/headless/main/docker-deploy") }}
+    {{ partial "docker-deploy" (dict "context" . "class" "") }}
+  {{ end }}
+
+  {{ with (.Site.GetPage "/headless/main/vectors") }}
+    {{ partial "vectors" . }}
+  {{ end }}
+
+  {{ partial "get-started" . }}
 {{ end }}
-
-{{ with (.Site.GetPage "/headless/main/vectors") }}
-  {{ partial "vectors" . }}
-{{ end }}
-
-{{ partial "get-started" . }}
-
-{{ partial "footer" . }}
