Add Recommendations page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -67,6 +67,9 @@
 @import 'partials/contact-hero';
 @import 'partials/contact-form';
 @import 'partials/use-cases-vector-hero';
-@import 'partials/advanced-search-features';
+@import 'partials/use-cases-vector-get-started';
+@import 'partials/use-cases-vector-features';
+@import 'partials/use-cases-vector-cases';
+@import 'partials/case-study';
 @import 'partials/advanced-search-use-cases';
-@import 'partials/advanced-search-get-started';
+@import 'partials/recommendations-api';
