--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_use-cases-vector-features.scss
@@ -1,6 +1,6 @@
 @use '../helpers/functions' as *;
 
-.advanced-search-features {
+.use-cases-vector-features {
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 4;
   background-color: $neutral-94;
@@ -67,6 +67,7 @@
     &__title {
       font-size: $spacer * 3;
       line-height: rem(57);
+      padding-right: $spacer * 2;
       margin-bottom: 0;
     }
 
