--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/recommendations-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/recommendations-features.html
@@ -1,4 +1,4 @@
-{{ with (.Site.GetPage "/advanced-search/advanced-search-features") }}
+{{ with (.Site.GetPage "/recommendations/recommendations-features") }}
   <section class="use-cases-vector-features">
     <div class="container">
       <div class="use-cases-vector-features__header row">
@@ -6,15 +6,12 @@
         <p class="use-cases-vector-features__description col-12 col-xl-6">{{ .Params.description }}</p>
       </div>
       <div class="row g-4 gy-xl-3">
-        {{ range $index, $element := .Params.features }}
-          <div class="col-12 {{ if or (eq $index 0) (eq $index 3) }}col-xl-7{{ else }}col-xl-5{{ end }}">
+        {{ range .Params.features }}
+          <div class="col-12 col-xl-4">
             <div class="card use-cases-vector-features__card">
               <img class="use-cases-vector-features__card-icon" src="{{ .icon.src }}" alt="{{ .icon.alt }}" />
               <h6 class="use-cases-vector-features__card-title">{{ .title }}</h6>
               <p class="use-cases-vector-features__card-description">{{ .description }}</p>
-              <a class="use-cases-vector-features__card-link link link_md align-self-start" href="{{ .link.url }}">
-                {{ .link.text }}
-              </a>
             </div>
           </div>
         {{ end }}
