--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
@@ -48,7 +48,7 @@
     justify-content: center;
     flex-wrap: nowrap;
     flex-shrink: 0;
-    padding: 0 $spacer;
+    margin: 0 $spacer;
     position: relative;
     color: $neutral-98;
     line-height: 1.5;
@@ -56,13 +56,13 @@
     @include mixins.transitionAll(300ms);
 
     &:hover {
-      .main-menu__subitems {
+      .main-menu__submenu {
         display: flex;
       }
     }
   }
 
-  &__subitems {
+  &__submenu {
     display: none;
     flex-direction: column;
     justify-content: flex-end;
@@ -103,35 +103,48 @@
     }
   }
 
-  &__subitem {
+  &__submenu-item {
+    width: 100%;
     list-style: none;
-    margin: 0.5rem;
-    height: 2rem;
+    margin-bottom: rem(4);
     &:last-of-type {
       margin-bottom: 0;
     }
     & a {
       display: flex;
+      height: 2.5rem;
+      line-height: 1;
       align-items: center;
-      height: 1rem;
+      border-radius: rem(4);
       color: $neutral-20;
-    }
-    span {
-      line-height: 0.9;
+      padding: 0.5rem;
     }
     i {
       display: block;
       width: 1rem;
       height: 1rem;
       color: $primary-50;
+      margin-top: 0.3rem;
+      margin-bottom: 0.2rem;
       margin-right: rem(12);
-      background-position: center;
+      background-position: center bottom;
+      background-repeat: no-repeat;
     }
 
     &:hover {
-      span {
+      a {
+        background: $neutral-94;
         color: $primary-50;
       }
+    }
+  }
+
+  &__section-link {
+    padding: 0.5rem;
+    margin-bottom: rem(4);
+    text-transform: uppercase;
+    a {
+      line-height: $font-size-s;
     }
   }
 
