--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/menu.html
@@ -24,7 +24,7 @@
               {{ end }}
               {{ range .subMenuItems }}
                 <li class="main-menu__submenu-item">
-                  <a href="{{ .url }}">
+                  <a href="{{ .url }}" {{ if strings.HasPrefix .url "http" }} target="_blank" rel="noopener noreferrer nofollow"{{ end }} >
                     <i style="background-image: url(/img/menu/{{ .icon }})"> </i>
                     <span>{{ .name }}</span>
                   </a>
