--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
@@ -48,12 +48,102 @@
     justify-content: center;
     flex-wrap: nowrap;
     flex-shrink: 0;
-    padding: 0 $spacer;
+    margin: 0 $spacer;
     position: relative;
     color: $neutral-98;
     line-height: 1.5;
     white-space: nowrap;
     @include mixins.transitionAll(300ms);
+
+    &:hover {
+      .main-menu__submenu {
+        display: flex;
+      }
+    }
+  }
+
+  &__submenu {
+    display: none;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding: rem(24);
+    position: absolute;
+
+    border-radius: 12px;
+    border: 1px solid $neutral-90;
+    background: $neutral-98;
+    box-shadow:
+      0 1px 2px 0 rgba(22, 30, 51, 0.1),
+      0 10px 20px 0 rgba(22, 30, 51, 0.1);
+    top: 48px;
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -7px;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-bottom: 8px solid $neutral-98;
+      transform: translateX(-50%);
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 30px;
+      top: -30px;
+      left: 0;
+    }
+  }
+
+  &__submenu-item {
+    width: 100%;
+    list-style: none;
+    margin-bottom: rem(4);
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+    & a {
+      display: flex;
+      height: 2.5rem;
+      line-height: 1;
+      align-items: center;
+      border-radius: rem(4);
+      color: $neutral-20;
+      padding: 0.5rem;
+    }
+    img {
+      display: block;
+      width: auto;
+      height: 1rem;
+      color: $primary-50;
+      margin-top: 0.3rem;
+      margin-bottom: 0.2rem;
+      margin-right: rem(12);
+    }
+
+    &:hover {
+      a {
+        background: $neutral-94;
+        color: $primary-50;
+      }
+    }
+  }
+
+  &__section-link {
+    padding: 0.5rem;
+    margin-bottom: rem(4);
+    text-transform: uppercase;
+    a {
+      line-height: $font-size-s;
+    }
   }
 
   &__buttons {
